--- a/javascript/study/concat.html
+++ b/javascript/study/concat.html
@@ -19,7 +19,7 @@
                 <p class="t_desc2">둘 이상이 문자열을 결합하여 반환한다.</p>
                 <p class="t_box">"문자열".concat(문자열, 문자열,,,,)</p>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "javascript";
+<pre><code class="language-js">    const str1 = "javascript";
     const currentStr1 = str1.concat("reference");                           // javascriptreference
     const currentStr2 = str1.concat(" ", "reference");                      // javascript reference
     const currentStr3 = str1.concat(", ", "reference");                     // javascript, reference
