--- a/javascript/study/includes.html
+++ b/javascript/study/includes.html
@@ -22,7 +22,7 @@
                     "문자열".includes(검색값, 위치값)
                 </p>
                 <div class="t_code">
-<pre><code class="language.js">    const str = "javascript reference";
+<pre><code class="language-js">    const str = "javascript reference";
     const currentStr1 = str1.includes("javascript")     // true
     const currentStr2 = str1.includes("j")              // true
     const currentStr3 = str1.includes("b")              // flase    //포함하고 있지 않기에 false
