--- a/javascript/study/indexOf.html
+++ b/javascript/study/indexOf.html
@@ -26,32 +26,32 @@
 
                 <p class="t_desc2">아래 사진은 문자에 위치를 숫자로 표시하였으며, 공백 또한 포함된다.</p>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "javascript reference"
+<pre><code class="language-js">    const str1 = "javascript reference"
     
-    const currentStr1 = str1.indexOf("javascipt")             // 00
-    const currentStr2 = str1.indexOf("reference")            // 11
-    const currentStr3 = str1.indexOf("j")                           // 0
-    const currentStr4  = str1.indexOf("a")                         // 1
-    const currentStr5 = str1.indexOf("v")                          // 2
-    const currentStr6 = str1.indexOf("jqeurey")                // -1
-    const currentStr8 = str1.indexOf("javascipt", 0)         // 0
-    const currentStr9 = str1.indexOf("javascipt", 1)         // -1
-    const currentStr10 = str1.indexOf("reference", 0)      // 11
-    const currentStr11 = str1.indexOf("reference", 1)      // 11
-    const currentStr12 = str1.indexOf("reference", 11)    // 11
-    const currentStr13 = str1.indexOf("reference", 12)    // -1
+    const currentStr1 = str1.indexOf("javascipt")               // 00
+    const currentStr2 = str1.indexOf("reference")              // 11
+    const currentStr3 = str1.indexOf("j")                             // 0
+    const currentStr4  = str1.indexOf("a")                           // 1
+    const currentStr5 = str1.indexOf("v")                            // 2
+    const currentStr6 = str1.indexOf("jqeurey")                  // -1
+    const currentStr8 = str1.indexOf("javascipt", 0)           // 0
+    const currentStr9 = str1.indexOf("javascipt", 1)           // -1
+    const currentStr10 = str1.indexOf("reference", 0)        // 11
+    const currentStr11 = str1.indexOf("reference", 1)        // 11
+    const currentStr12 = str1.indexOf("reference", 11)      // 11
+    const currentStr13 = str1.indexOf("reference", 12)      // -1
 
-    const currentStr14 = str1.lastIndexOf("javascipt")      // 0
-    const currentStr15 = str1.lastIndexOf("reference")      // 11
-    const currentStr16 = str1.lastIndexOf("j")              // 0
-    const currentStr17 = str1.lastIndexOf("a")              // 3    // 뒤에서 기준을 잡기에 3
-    const currentStr18 = str1.lastIndexOf("v")              // 2
-    const currentStr19 = str1.lastIndexOf("jqeurey")        // -1
-    const currentStr20 = str1.lastIndexOf("b")              // -1
-    const currentStr21 = str1.lastIndexOf("javascipt", 0)   // 0
-    const currentStr22 = str1.lastIndexOf("javascipt", 1)   // 0
-    const currentStr23 = str1.lastIndexOf("reference", 0)   // -1
-    const currentStr24 = str1.lastIndexOf("reference", 1)   // -1
+    const currentStr14 = str1.lastIndexOf("javascipt")        // 0
+    const currentStr15 = str1.lastIndexOf("reference")       // 11
+    const currentStr16 = str1.lastIndexOf("j")                      // 0
+    const currentStr17 = str1.lastIndexOf("a")                     // 3    // 뒤에서 기준을 잡기에 3
+    const currentStr18 = str1.lastIndexOf("v")                     // 2
+    const currentStr19 = str1.lastIndexOf("jqeurey")           // -1
+    const currentStr20 = str1.lastIndexOf("b")                     // -1
+    const currentStr21 = str1.lastIndexOf("javascipt", 0)     // 0
+    const currentStr22 = str1.lastIndexOf("javascipt", 1)     // 0
+    const currentStr23 = str1.lastIndexOf("reference", 0)    // -1
+    const currentStr24 = str1.lastIndexOf("reference", 1)    // -1
     const currentStr25 = str1.lastIndexOf("reference", 11)  // 11
     const currentStr26 = str1.lastIndexOf("reference", 12)  // 11
 </code></pre>
