--- a/javascript/study/repeat.html
+++ b/javascript/study/repeat.html
@@ -18,7 +18,7 @@
                 <h3 class="t_tit2">repeat()</h3>
                 <p class="t_desc2">문자열을 복사하여, 복사한 새로운 문자열을 반환한다.</p>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "javascript";
+<pre><code class="language-js">    const str1 = "javascript";
     const currentStr1 = str1.repeat(0);
     const currentStr2 = str1.repeat(1);     // javascript
     const currentStr3 = str1.repeat(2);     // javascriptjavascript
