--- a/javascript/study/sss.html
+++ b/javascript/study/sss.html
@@ -26,7 +26,7 @@
                     "문자열".substr(시작위치, 길이)
                 </p>
                 <div class="t_code">
-<pre><code class="language.js">    // 각 주석 표시는 해당 메서드가 추출한 반환 값
+<pre><code class="language-js">    // 각 주석 표시는 해당 메서드가 추출한 반환 값
     
     const str1 = "javascript reference"
 
