--- a/javascript/study/tem.html
+++ b/javascript/study/tem.html
@@ -54,7 +54,7 @@
                     </tbody>
                 </table><br>
                 <div class="t_code">
-<pre><code class="language.js">    //01
+<pre><code class="language-js">    //01
     const str1 = "자바스크립트";
     const str2 = "제이쿼리";
 
