--- a/javascript/study/toto.html
+++ b/javascript/study/toto.html
@@ -42,7 +42,7 @@
                     </tbody>
                 </table><br>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "javascript";
+<pre><code class="language-js">    const str1 = "javascript";
     const currentStr1 = str1.toUpperCase();
 
     document.querySelector(".sample02_N1").innerHTML = "1";
