--- a/javascript/study/ttt.html
+++ b/javascript/study/ttt.html
@@ -48,7 +48,7 @@
                     </tbody>
                 </table><br>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "       javascript      "
+<pre><code class="language-js">    const str1 = "       javascript      "
     const currentStr1 = str1.trim();
 
     document.querySelector(".sample03_N1").innerHTML = "1";
