--- a/javascript/study/rr.html
+++ b/javascript/study/rr.html
@@ -18,23 +18,23 @@
                 <h3 class="t_tit2">replace() / replaceAll()</h3>
                 <p class="t_desc2">replace() 메서드는 문자열을 부분 문자로 구분하고 배열로 반환한다.</p>
                 <div class="t_code">
-<pre><code class="language.js">    const str1 = "javascript reference"
+<pre><code class="language-js">    const str1 = "javascript reference"
     const cirrentStr1 = str1.replace("javascript", "자바스크립트")      // 자바스크립트 reference
-    const cirrentStr2 = str1.replace("j", "J")                         // Javascript reference
-    const cirrentStr3 = str1.replace("e", "E")                         // Javascript rEference
-    const cirrentStr4 = str1.replaceAll("e", "E")                      // Javascript rEfErEncE
-    const cirrentStr5 = str1.replaceAll(/e/g, "E")                     // Javascript rEfErEncE
-    const cirrentStr6 = str1.replaceAll(/e/gi, "E")                    // Javascript rEfErEncE
+    const cirrentStr2 = str1.replace("j", "J")                                       // Javascript reference
+    const cirrentStr3 = str1.replace("e", "E")                                      // Javascript rEference
+    const cirrentStr4 = str1.replaceAll("e", "E")                                  // Javascript rEfErEncE
+    const cirrentStr5 = str1.replaceAll(/e/g, "E")                                // Javascript rEfErEncE
+    const cirrentStr6 = str1.replaceAll(/e/gi, "E")                               // Javascript rEfErEncE
 
     const str2 = "https://www.naver.com/img01.jpg";
     const cirrentStr7 = str2.replace("img01", "img02")
 
     const str3 = "010-2000-1000";
-    const cirrentStr8 = str3.replace("-","")                // 0102000-1000
-    const cirrentStr9 = str3.replaceAll("-","")             // 01020001000
-    const cirrentStr10 = str3.replaceAll(/-/g,"")           // 01020001000
-    const cirrentStr11 = str3.replaceAll(/-/g," ")          // 010 2000 1000
-    const cirrentStr12 = str3.replaceAll("-","*")           // 010*2000*1000
+    const cirrentStr8 = str3.replace("-","")                      // 0102000-1000
+    const cirrentStr9 = str3.replaceAll("-","")                  // 01020001000
+    const cirrentStr10 = str3.replaceAll(/-/g,"")              // 01020001000
+    const cirrentStr11 = str3.replaceAll(/-/g," ")             // 010 2000 1000
+    const cirrentStr12 = str3.replaceAll("-","*")              // 010*2000*1000
     const cirrentStr13 = str3.replaceAll(/[1,2]/g, "*")     // 010*2000*1000
 </code></pre>
                 </div>
