--- a/site/imageType/imageType01.html
+++ b/site/imageType/imageType01.html
@@ -101,13 +101,13 @@
         <p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.</p>
         <div class="image__inner container">
             <article class="image img1">
-                <h3 class="image__title">EV6</h3>
-                <p class="image__desc">기아 EV6가 연식변경을 거친다. 관련 업계에 따르면 2023년형 EV6에는 배터리 컨디셔닝이 추가되며, 트림에 따라 고객 선호 사양이 기본 적용</p>
+                <h3 class="image__title">POTTERY</h3>
+                <p class="image__desc"> 시간에도 도자기는 그 본질이 변하지 않습니다. 우리는 도자기처럼 본질을 지키면서 시간에 따라 변하는 개개인의 삶에 집중하여 옷을 만듭니다.</p>
                 <a class="image__btn" href="/" title="자세히 보기">자세히 보기</a>
             </article>
             <article class="image img2">
-                <h3 class="image__title">EV6</h3>
-                <p class="image__desc">기아 EV6가 연식변경을 거친다. 관련 업계에 따르면 2023년형 EV6에는 배터리 컨디셔닝이 추가되며, 트림에 따라 고객 선호 사양이 기본 적용</p>
+                <h3 class="image__title">POTTERY</h3>
+                <p class="image__desc"> 시간에도 도자기는 그 본질이 변하지 않습니다. 우리는 도자기처럼 본질을 지키면서 시간에 따라 변하는 개개인의 삶에 집중하여 옷을 만듭니다.</p>
                 <a class="image__btn yellow" href="/" title="자세히 보기">자세히 보기</a>
             </article>
         </div>
