--- a/site/imageType/imageType02-01.html
+++ b/site/imageType/imageType02-01.html
@@ -85,33 +85,17 @@
             transform: scale(1.05);
             transition: all 0.3s ease-in;
         }
-        .img01 .image__desc {
-            background: rgba(81, 78, 103, 0.5);
-        }
-        .img02 .image__desc {
-            background: rgba(81, 78, 103, 0.5);
-        }
-        .img03 .image__desc {
-            background: rgba(255, 255, 255, 0.2);
-        }
-        .img01 .image__desc h3 {
-            color: rgb(255, 255, 255);
-        }
-        .img02 .image__desc h3 {
-            color: rgb(255, 255, 255);
-        }
-        .img03 .image__desc h3 {
-            color: rgb(255, 255, 255);
-        }
-        .img01 .image__desc .more {
-            color: rgb(255, 255, 255);
-        }
-        .img02 .image__desc .more {
-            color: rgb(255, 255, 255);
-        }
-        .img03 .image__desc .more {
-            color: rgb(255, 255, 255);
-        }
+        .img01 .image__desc {background: rgba(81, 78, 103, 0.5);}
+        .img02 .image__desc {background: rgba(81, 78, 103, 0.5);}
+        .img03 .image__desc {background: rgba(255, 255, 255, 0.2);}
+        
+        .img01 .image__desc h3 {color: rgb(255, 255, 255);}
+        .img02 .image__desc h3 {color: rgb(255, 255, 255);}
+        .img03 .image__desc h3 {color: rgb(255, 255, 255);}
+
+        .img01 .image__desc .more {color: rgb(255, 255, 255);}
+        .img02 .image__desc .more {color: rgb(255, 255, 255);}
+        .img03 .image__desc .more {color: rgb(255, 255, 255);}
         .image__desc h3 {
             font-size: 24px;
             margin-bottom: 10px;
