--- a/test.html
+++ b/test.html
@@ -1,106 +1,33 @@
-const quizInfo = [
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "1",
-                answerAsk : "디자인 과정이 차레대로 옳게 나열된 것은?",
-                answerChoice : {
-                    1: "욕구과정 → 기술과정 → 재료과정 → 조형과정",
-                    2: "조형과정 → 재료과정 → 기술과정 → 욕구과정",
-                    3: "재료과정 → 기술과정 → 욕구과정 → 조형과정",
-                    4: "욕구과정 → 조형과정 → 재료과정 → 기술과정"
-                },
-                answerResult : "4",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "2",
-                answerAsk : "다음과 같이 문자를 대신하여 의사소통이 가능한 그림 문자를 뜻하는 용어는?",
-                answerChoice : {
-                    1: "캐릭터",
-                    2: "픽토그램",
-                    3: "로고타입",
-                    4: "일러스트레이션"
-                },
-                answerResult : "2",
-                answerEx : "말과 글 없이 통하는 그림 언어인 픽토그램(Pictogram)은 그림을 뜻하는 픽토(Picto)와 전보를 뜻하는 텔레그램(Telegram)의 합성어입니다. 사물과 시설 그리고 행동 등을 상징화하여, 불특정 다수의 사람들이 빠르고 쉽게 이해할 수 있도록 나타낸 시각 디자인을 말합니다."
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "3",
-                answerAsk : "다음 중 동시 대비와 가장 거리가 먼 것은?",
-                answerChoice : {
-                    1: "색상 대비",
-                    2: "명도 대비",
-                    3: "보색 대비",
-                    4: "한란 대비"
-                },
-                answerResult : "4",
-                answerEx : "동시대비란 서로 가까이 놓여진 두 개 이상의 색을 동시에 볼때 일어나는 현상으로 서로의 영향에 따라 색이 다르게 보이는 현상입니다. 종류로는 색상대비, 명도대비, 채도대비, 보색대비가 있습니다."
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "4",
-                answerAsk : "1, 2, 4, 8, 16...과 같이 이웃하는 두 항의 비가 일정한 수열은?",
-                answerChoice : {
-                    1: "등차수열",
-                    2: "등비수열",
-                    3: "피보나치수열",
-                    4: "조회수열"
-                },
-                answerResult : "2",
-                answerEx : "일정한 비로 증가하는 것을 등비수열이라고 하며, 일정한 차로 증가하는 것을 등차수열이라고 합니다."
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "5",
-                answerAsk : "검정종이 위에 노랑과 파랑을 나열하여 일정한 거리에서 보았을 때 나타나는 현상에 관한 설명으로 옳은 것은?",
-                answerChoice : {
-                    1: "노랑이 파랑보다 가깝게 보인다.",
-                    2: "파랑이 노랑보다 가깝게 보인다.",
-                    3: "노랑은 후퇴색이라 한다.",
-                    4: "파랑을 진출색이라 한다."
-                },
-                answerResult : "1",
-                answerEx : "검정과 노랑배색이 제일 명시도가 높은 배색"
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "6",
-                answerAsk : "색채 조화가 잘 되도록 하기 위한 방법으로 틀린 것은?",
-                answerChoice : {
-                    1: "색상의 수를 될 수 있는 대로 줄인다.",
-                    2: "고채도의 색을 이용하여 색채 효과를 높인다.",
-                    3: "색의 차갑고 따뜻한 느낌을 이용한다.",
-                    4: "환경의 밝고 어두움을 고려한다."
-                },
-                answerResult : "2",
-                answerEx : "조화는 조형의 기본 요소인 선, 형태, 색채가 잘 어울리게 하는 것입니다."
-            },
-            // {
-            //     answerType : "웹디자인기능사 2010년 01회",
-            //     answerNum : "7",
-            //     answerAsk : "감산 혼합의 3원색이 아닌 것은?",
-            //     answerChoice : {
-            //         1: "MAGENTA",
-            //         2: "YELLOW",
-            //         3: "BLUE",
-            //         4: "CYAN"
-            //     },
-            //     answerResult : "3",
-            //     answerEx : "감산 혼합의 3원색은 자주, 청록, 노랑 입니다."
-            // },
-            // {
-            //     answerType : "웹디자인기능사 2010년 01회",
-            //     answerNum : "8",
-            //     answerAsk : "디자인 원리와 관련된 용어 설명 중 틀린 것은?",
-            //     answerChoice : {
-            //         1: "조화-둘 이상의 요소가 서로 밀접한 관계를 갖고 어울렸을 때 말하는 것",
-            //         2: "통일-정돈과 안정된 느낌을 주는 것",
-            //         3: "변화-크기나 형태 및 색채 등이 같지 않은 것",
-            //         4: "균형-형이나 색 등이 반복되어 느껴지는 아름다운 운동감"
-            //     },
-            //     answerResult : "4",
-            //     answerEx : "균형은 물리적 구조와 색채에서 시각적인 안정감을 주는 것을 의미합니다. 크게 대칭과 비대칭이 있습니다. 형이나 색 등이 반복되어 느껴지는 아름다운 운동감을 율동이라 합니다."
-            // },
-        ];
+&lt;section id="imageType01" class="image__wrap nanum section">
+    &lt;h2>Moon&lt;/h2>
+    &lt;p>밤하늘의 하나의 빛줄기&lt;/p>
+    &lt;div class="image__inner container">
+        &lt;article class="image img01">
+            &lt;figure class="image__box">
+                &lt;img src="img/image02_01.jpg" alt="달빛">
+            &lt;/figure>
+            &lt;div class="image__desc">
+                &lt;h3>달빛&lt;/h3>
+                &lt;a href="/" class="more" title="자세히 보기">자세히 보기&lt;/a>
+            &lt;/div>
+        &lt;/article>
+        &lt;article class="image img02">
+            &lt;figure class="image__box">
+                &lt;img src="img/image02_02.jpg" alt="달빛">
+            &lt;/figure>
+            &lt;div class="image__desc">
+                &lt;h3>달빛&lt;/h3>
+                &lt;a href="/" class="more" title="자세히 보기">자세히 보기&lt;/a>
+            &lt;/div>
+        &lt;/article>
+        &lt;article class="image img03">
+            &lt;figure class="image__box">
+                &lt;img src="img/image02_03.jpg" alt="달빛">
+            &lt;/figure>
+            &lt;div class="image__desc">
+                &lt;h3>달빛&lt;/h3>
+                &lt;a href="/" class="more" title="자세히 보기">자세히 보기&lt;/a>
+            &lt;/div>
+        &lt;/article>
+    &lt;/div>
+&lt;/section>
