--- a/javascript/study/imageType01.html
+++ b/javascript/study/imageType01.html
@@ -26,7 +26,7 @@
                 section내에 각 태그에 이름을 부여해주며, <i>articel</i> 영역과 <i>figure</i>태그 내에 img를 사용줍니다.<br>
             </p>
             <div class="t_code">
-<pre><code>    &lt;section id="imageType01" class="image__wrap nexon section">
+<pre><code class="language-js">    &lt;section id="imageType01" class="image__wrap nexon section">
         &lt;h2>POTTERY&lt;/h2>
         &lt;p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.&lt;/p>
         &lt;div class="image__inner container">
@@ -51,7 +51,7 @@
                 h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>를 사용해줍니다.
             </p>
             <div class="t_code">
-<pre><code>    /* fonts */
+<pre><code class="language-js">    /* fonts */
     @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
     .nexon {
         font-family: 'NexonLv1Gothic';
@@ -140,7 +140,7 @@
     }
 </code></pre>
                 <div class="t_link">
-                    <a href="https://github.com/KDB6/ck/blob/main/site/cardType/cardType01.html" target="_blank">코드 원본 보기</a>
+                    <a href="https://github.com/KDB6/ck/blob/main/site/imageType/imageType01.html" target="_blank">코드 원본 보기</a>
                 </div>
             </div>
 
@@ -148,11 +148,11 @@
 
             <h3 class="t_tit2">결과물</h3>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/site/cardType/cardType01.html" frameborder="0"></iframe>
+                <iframe src="https://kdb6.github.io/ck/site/imageType/imageType01.html" frameborder="0"></iframe>
             </div>
     
             <div class="t_link">
-                <a href="https://kdb6.github.io/ck/site/cardType/cardType01.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://kdb6.github.io/ck/site/imageType/imageType01.html" target="_blank">원본 사이트 보기</a>
             </div>
 
         </div>
