--- a/javascript/study/imageType02.html
+++ b/javascript/study/imageType02.html
@@ -12,12 +12,12 @@
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">이미지 타입 01</h2>
+            <h2 class="t_tit">이미지 타입 02</h2>
             <p class="t_desc2">
                 사이트에 기초적인 구조를 가진 이미지 타입 사이트를 만들어 봅시다.
             </p>
             <div class="t_iframe">
-                <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D930%253A150" allowfullscreen></iframe>
+                <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D944%253A170" allowfullscreen></iframe>
             </div>
 
             <h3 class="t_tit2">Site HTML</h3>
@@ -26,7 +26,7 @@
                 section내에 각 태그에 이름을 부여해주며, <i>articel</i> 영역과 <i>figure</i>태그 내에 img를 사용줍니다.<br>
             </p>
             <div class="t_code">
-<pre><code>    &lt;section id="imageType01" class="image__wrap nanum section">
+<pre><code class="language-js">    &lt;section id="imageType01" class="image__wrap nanum section">
         &lt;h2>Moon&lt;/h2>
         &lt;p>밤하늘의 하나의 빛줄기&lt;/p>
         &lt;div class="image__inner container">
@@ -66,10 +66,10 @@
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
                 h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>를 사용해줍니다.
-                또한 이번에는 image:hover 효과에 <i>transform, transition</i>를 부여했습니다.
+                또한 이번에는 <i>image:hover</i> 효과에 <i>transform, transition</i>를 부여했습니다.
             </p>
             <div class="t_code">
-<pre><code>    /* fonts */
+<pre><code class="language-js">    /* fonts */
     @import url('https://webfontworld.github.io/NanumSquareRound/NanumSquareRound.css');
     .nanum {
         font-family: "NanumSquareRound";
@@ -171,7 +171,7 @@
     }
 </code></pre>
                 <div class="t_link">
-                    <a href="https://github.com/KDB6/ck/blob/main/site/cardType/cardType01.html" target="_blank">코드 원본 보기</a>
+                    <a href="https://github.com/KDB6/ck/blob/main/site/imageType/imageType02.html" target="_blank">코드 원본 보기</a>
                 </div>
             </div>
 
@@ -179,11 +179,11 @@
 
             <h3 class="t_tit2">결과물</h3>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/site/cardType/cardType01.html" frameborder="0"></iframe>
+                <iframe src="https://kdb6.github.io/ck/site/imageType/imageType02.html" frameborder="0"></iframe>
             </div>
     
             <div class="t_link">
-                <a href="https://kdb6.github.io/ck/site/cardType/cardType01.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://kdb6.github.io/ck/site/imageType/imageType02.html" target="_blank">원본 사이트 보기</a>
             </div>
 
         </div>
