--- a/javascript/study/indexOf.html
+++ b/javascript/study/indexOf.html
@@ -18,13 +18,11 @@
                 <h3 class="t_tit2">indexOf() / lastIndexOf()</h3>
                 <p class="t_desc2">문자열에서 특정 문자의 위치를 찾고 숫자를 반환하는 메서드이다.</p>
                 <p class="t_box">
-                    "문자열".index(검색값)<br>
-                    "문자열".index(검색값, 위치값)<br>
+                    "문자열".indexOf(검색값)<br>
+                    "문자열".indexOf(검색값, 위치값)<br>
                     "문자열".lastIndexOf(검색값)<br>
                     "문자열".lastIndexOf(검색값, 위치값)
-                </p><br><br>
-
-                <p class="t_desc2">아래 사진은 문자에 위치를 숫자로 표시하였으며, 공백 또한 포함된다.</p>
+                </p><br>
                 <div class="t_code">
 <pre><code class="language-js">    const str1 = "javascript reference"
     
