--- a/test.html
+++ b/test.html
@@ -1,33 +1,60 @@
-&lt;section id="imageType01" class="image__wrap nanum section">
-    &lt;h2>Moon&lt;/h2>
-    &lt;p>밤하늘의 하나의 빛줄기&lt;/p>
-    &lt;div class="image__inner container">
-        &lt;article class="image img01">
-            &lt;figure class="image__box">
-                &lt;img src="img/image02_01.jpg" alt="달빛">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>달빛&lt;/h3>
-                &lt;a href="/" class="more" title="자세히 보기">자세히 보기&lt;/a>
+&lt;main id="main">
+    &lt;div class="search__wrap">
+        &lt;span>indexOf()를 이용하여 검색하기&lt;/span>
+        &lt;h1>CSS 속성 검색하기&lt;/h1>
+        
+        &lt;div class="search__box">
+            &lt;label for="search">검색하기&lt;/label>
+            &lt;input type="text" id="search" placeholder="CSS 속성을 입력해주세요.">
+        &lt;/div>
+        &lt;div class="search_info">
+            &lt;div>CSS 속성 갯수 : &lt;span class="num">0&lt;/span>&lt;/div>
+        &lt;/div>
+        &lt;div class="search__list">
+            &lt;div class="css">
+                &lt;ul>
+                    &lt;li data-name="accent-color">&lt;strong>accent-color&lt;/strong> : href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼 링크를 만듭니다.&lt;/li>
+                    &lt;li data-name="align-content">&lt;strong>align-content&lt;/strong> :  콘텐츠 아이템의 상하관계 정렬 상태를 설정&lt;/li>
+                    &lt;li data-name="align-items">&lt;strong>align-items&lt;/strong> : 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정&lt;/li>
+                    &lt;li data-name="align-self">&lt;strong>align-self&lt;/strong> : 개별적인 콘텐츠 아이템의 정렬 상태를 설정&lt;/li>
+                    &lt;li data-name="all">&lt;strong>all&lt;/strong> : 요소의 속성을 초기화 또는 상속을 설정&lt;/li>
+                    &lt;li data-name="animation">&lt;strong>animation&lt;/strong> : 애니메이션과 관련된 속성을 일괄적으로 설정&lt;/li>
+                    &lt;li data-name="animation-delay">&lt;strong>animation-delay&lt;/strong> : 애니메이션 지연 시간을 설정&lt;/li>
+                    &lt;li data-name="animation-direction">&lt;strong>animation-direction&lt;/strong> : 애니메이션 움직임 방향을 설정&lt;/li>
+                    &lt;li data-name="animation-duration">&lt;strong>animation-duration&lt;/strong> : 애니메이션 움직임 시간을 설정&lt;/li>
+                    &lt;li data-name="animation-fill-mode">&lt;strong>animation-fill-mode&lt;/strong> : 애니메이션이 끝난 후의 상태를 설정&lt;/li>
+                    &lt;li data-name="animation-iteration-count">&lt;strong>animation-iteration-count&lt;/strong> : 애니메이션의 반복 횟수를 설정	&lt;/li>
+                    &lt;li data-name="animation-name">&lt;strong>animation-name&lt;/strong> : 애니메이션 Keyframe 이름을 설정&lt;/li>
+                    &lt;li data-name="animation-play-state">&lt;strong>animation-play-state&lt;/strong> : 애니메이션 진행 상태를 설정&lt;/li>
+                    &lt;li data-name="animation-timeline">&lt;strong>animation-timeline&lt;/strong> : 애니메이션을 설명하는 하나 이상의 규칙과 이름을 설정&lt;/li>
+                    &lt;li data-name="animation-timing-function">&lt;strong>animation-timing-function&lt;/strong> : 애니메이션 움직임의 속도를 설정&lt;/li>
+                    &lt;li data-name="appearance">&lt;strong>appearance&lt;/strong> : 운영 체제의 테마를 기반으로 하는 UI 컨트롤의 기본 모양을 제어&lt;/li>
+                    &lt;li data-name="aspect-ratio">&lt;strong>aspect-ratio&lt;/strong> : 자동 크기 및 기타 레이아웃 기능 계산에 사용되는 상자의 기본 종횡비를 설정&lt;/li>
+                    &lt;li data-name="backdrop-filter">&lt;strong>backdrop-filter&lt;/strong> : 배경에 그래픽 효과를 설정&lt;/li>
+                    &lt;li data-name="backface-visibility">&lt;strong>backface-visibility&lt;/strong> :  요소의 뒷면을 설정합니다. 요소가 3D인 경우에서 설정 할 수 있다.&lt;/li>
+                    &lt;li data-name="background">&lt;strong>background&lt;/strong> : 백그라운드 속성을 일괄적으로 설정&lt;/li>
+                    &lt;li data-name="background-attachment">&lt;strong>background-attachment&lt;/strong> : 배경 이미지의 고정 여부를 설정&lt;/li>
+                    &lt;li data-name="background-blend-mode">&lt;strong>background-blend-mode&lt;/strong> : 배경을 혼합했을 때 그래픽 효과를 설정&lt;/li>
+                    &lt;li data-name="background-clip">&lt;strong>background-clip&lt;/strong> : 백그라운드 이미지의 위치 기준점을 설정&lt;/li>
+                    &lt;li data-name="background-color">&lt;strong>background-color&lt;/strong> : 백그라운드 색을 설정&lt;/li>
+                    &lt;li data-name="background-image">&lt;strong>background-image&lt;/strong> : 백그라운드 이미지 속성을 설정&lt;/li>
+                    &lt;li data-name="background-origin">&lt;strong>background-origin&lt;/strong> : 	백그라운드 이미지의 위치 기준점을 설정하기 위한 속성&lt;/li>
+                    &lt;li data-name="background-position">&lt;strong>background-position&lt;/strong> : 백그라운드 이미지의 위치 영역을 설정&lt;/li>
+                    &lt;li data-name="background-position-x">&lt;strong>background-position-x&lt;/strong> : 백그라운드 이미지의 x축 위치 영역을 설정&lt;/li>
+                    &lt;li data-name="background-position-y">&lt;strong>background-position-y&lt;/strong> : 	백그라운드 이미지의 y축 위치 영역을 설정&lt;/li>
+                    &lt;li data-name="background-repeat">&lt;strong>background-repeat&lt;/strong> : 백그라운드 이미지 반복 여부를 설정&lt;/li>
+                    &lt;li data-name="background-size">&lt;strong>background-size&lt;/strong> : 백그라운드 이미지 사이즈를 설정&lt;/li>
+                    &lt;li data-name="block-size">&lt;strong>block-size&lt;/strong> : 쓰기 모드에  따라 요소 블록의 가로 또는 세로 크기를 설정&lt;/li>
+                    &lt;li data-name="border">&lt;strong>border&lt;/strong> : 테두리 속성을 일괄적으로 설정&lt;/li>
+                    &lt;li data-name="border-block">&lt;strong>border-block&lt;/strong> : 테두리 속성을 고정&lt;/li>
+                    &lt;li data-name="border-block-color">&lt;strong>border-block-color&lt;/strong> : 고정된 테두리 속성에 색상 부여&lt;/li>
+                    &lt;li data-name="border-block-end">&lt;strong>border-block-end&lt;/strong> : 테두리 속성 끝 부분에 고정&lt;/li>
+                    &lt;li data-name="boorder-block-end-color">&lt;strong>border-block-end-color&lt;/strong> : 테두리 속성 끝 부분에 고정 후 색상 부여&lt;/li>
+                    &lt;li data-name="border-block-end-style">&lt;strong>border-block-end-style&lt;/strong> : 테두리 속성 끝 부분에 고정 후 스타일 부여&lt;/li>
+                    &lt;li data-name="border-block-end-width">&lt;strong>border-block-end-width&lt;/strong> : 테두리 속성 끝 부분에 고정 후 width 속성 부여&lt;/li>
+                    &lt;li data-name="border-block-start">&lt;strong>border-block-start&lt;/strong> : 테두리 속성 시작 부분에 고정&lt;/li>
+                &lt;/ul>
             &lt;/div>
-        &lt;/article>
-        &lt;article class="image img02">
-            &lt;figure class="image__box">
-                &lt;img src="img/image02_02.jpg" alt="달빛">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>달빛&lt;/h3>
-                &lt;a href="/" class="more" title="자세히 보기">자세히 보기&lt;/a>
-            &lt;/div>
-        &lt;/article>
-        &lt;article class="image img03">
-            &lt;figure class="image__box">
-                &lt;img src="img/image02_03.jpg" alt="달빛">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>달빛&lt;/h3>
-                &lt;a href="/" class="more" title="자세히 보기">자세히 보기&lt;/a>
-            &lt;/div>
-        &lt;/article>
+        &lt;/div>
     &lt;/div>
-&lt;/section>
+&lt;/main>
