--- a/img/javaimg.html
+++ b/img/javaimg.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <img src="자바스크립트.jpg" alt="">
+        <img src="javascript.jpg" alt="">
     </div>
 </body>
 </html>
