--- a/img/css.html
+++ b/img/css.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <div>
-        <img src="javascript.jpg" alt="">
+        <img src="css.jpg" alt="">
+        <a href=""></a>
     </div>
 </body>
 </html>
