--- a/javascript/study/tem.html
+++ b/javascript/study/tem.html
@@ -37,7 +37,7 @@
                             <td class="ce">2</td>
                             <td class="ce">100, 200</td>
                             <td class="ce">숫자(number) 결합</td>
-                            <td class="ce">300/td>
+                            <td class="ce">300</td>
                         </tr>
                         <tr>
                             <td class="ce">3</td>
