--- a/img/search.html
+++ b/img/search.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <img src="img/css.jpg" alt="">
+        <img src="img/search.png" alt="">
         <a href=""></a>
     </div>
 </body>
