--- a/img/html.html
+++ b/img/html.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <img src="html.jpg" alt="">
+        <img src="img/html.jpg" alt="">
         <a href=""></a>
     </div>
 </body>
