--- a/img/javaimg.html
+++ b/img/javaimg.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <img src="javascript.jpg" alt="">
+        <img src="img/javascript.jpg" alt="">
         <a href=""></a>
     </div>
 </body>
