--- a/javascript/study/basic.html
+++ b/javascript/study/basic.html
@@ -130,7 +130,7 @@
                 3. 태그에 직접 기술하는 방법 등이 있습니다.
             </p>
             <div class="t_code">
-    <pre><code>    &lt;!DOCTYPE html&gt;
+<pre><code class="language-js">    &lt;!DOCTYPE html&gt;
     &lt;html lang="ko"&gt;
     &lt;head&gt;
         &lt;meta charset="UTF-8"&gt;
