--- a/site/imageType/imageType03.html
+++ b/site/imageType/imageType03.html
@@ -8,9 +8,10 @@
     <link href="https://webfontworld.github.io/yangheeryu/GowunBatang.css" rel="stylesheet">
     <style>
         /* fonts */
-        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
-        .gowun {
-            font-family: GowunBatang;
+        @import url('https://webfontworld.github.io/score/SCoreDream.css');
+        
+        .score {
+            font-family: SCoreDream;
             font-weight: 400;
         }
         /* reset */
@@ -81,7 +82,7 @@
         }
         .image__inner .image:nth-child(1) {
             grid-area: box1;
-            background: url(img/Rectangle\ 1.jpg);
+            background: url(img/image03_01.jpg);
             background-size: cover;
         }
         .image__inner .image:nth-child(2) {
@@ -151,49 +152,35 @@
     </style>
 </head>
 <body>
-    <section id="imageType03" class="image__wrap gowun section">
-        <h2>세상에서 가장 아름다운 건물</h2>
+    <section id="imageType03" class="image__wrap score section">
+        <h2>wynd</h2>
         <p>
-            웹쓰가 선정한 죽기전에 가봐야 할 건축물 베스트5입니다.<br>
-            전세계에서 가장 유명한 건축가가 제작한 건축물로써 한번은 꼭 가봐야 하는 곳입니다.
+            사전적 의미로 골목길이라는 뜻을 가지고 있습니다.
         </p>
         <div class="image__inner container-fluid">
             <article class="image">
                 <!-- <figure class="image__box">
-                    <img src="img/image_bg03_01.jpg" alt="셰이크 로트폴라 모스크">
+                    <img src="img/image03_01.jpg" alt="About us">
                 </figure> -->
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>About us</h3>
+                    <p>슬로우한 캐주얼 웨어</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span class="ir">페이스북</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
                 </div>
             </article>
             <article class="image">
                 <figure class="image__box">
-                    <img src="img/Rectangle 3.jpg" alt="셰이크 로트폴라 모스크">
+                    <img src="img/image03_02.jpg" alt="Bearded Kid">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
-                </div>
-                <div class="image__sns">
-                    <a href="#" class="link"><span class="ir">페이스북</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
-                </div>
-            </article>
-            <article class="image">
-                <figure class="image__box">
-                    <img src="img/Rectangle 2.jpg" alt="셰이크 로트폴라 모스크">
-                </figure>
-                <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>Bearded Kid</h3>
+                    <p>다양성의 존중이라는 슬로건</p>
                 </div>
                 <div class="image__sns">
                     <a href="#" class="link"><span class="ir">페이스북</span></a>
@@ -202,11 +189,11 @@
             </article>
             <article class="image">
                 <figure class="image__box">
-                    <img src="img/Rectangle 6.jpg" alt="셰이크 로트폴라 모스크">
+                    <img src="img/image03_03.jpg" alt="Fall Break">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>Fall Break</h3>
+                    <p>가벼운 휴식 뒤 리프레시되는 느낌의 의류</p>
                 </div>
                 <div class="image__sns">
                     <a href="#" class="link"><span class="ir">페이스북</span></a>
@@ -215,11 +202,24 @@
             </article>
             <article class="image">
                 <figure class="image__box">
-                    <img src="img/Rectangle 5.jpg" alt="셰이크 로트폴라 모스크">
+                    <img src="img/image03_04.jpg" alt="Pottery">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>Pottery</h3>
+                    <p>현대사회에 알맞는 유니폼을 제안</p>
+                </div>
+                <div class="image__sns">
+                    <a href="#" class="link"><span class="ir">페이스북</span></a>
+                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
+                </div>
+            </article>
+            <article class="image">
+                <figure class="image__box">
+                    <img src="img/image03_05.jpg" alt="Shirter">
+                </figure>
+                <div class="image__desc">
+                    <h3>Shirter</h3>
+                    <p>가치를 잃지 않는 변화</p>
                 </div>
                 <div class="image__sns">
                     <a href="#" class="link"><span class="ir">페이스북</span></a>
