--- a/site/imageType/imageType03.html
+++ b/site/imageType/imageType03.html
@@ -9,7 +9,7 @@
     <style>
         /* fonts */
         @import url('https://webfontworld.github.io/score/SCoreDream.css');
-        
+
         .score {
             font-family: SCoreDream;
             font-weight: 400;
@@ -183,8 +183,8 @@
                     <p>다양성의 존중이라는 슬로건</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span class="ir">페이스북</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
                 </div>
             </article>
             <article class="image">
@@ -196,8 +196,8 @@
                     <p>가벼운 휴식 뒤 리프레시되는 느낌의 의류</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span class="ir">페이스북</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
                 </div>
             </article>
             <article class="image">
@@ -209,8 +209,8 @@
                     <p>현대사회에 알맞는 유니폼을 제안</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span class="ir">페이스북</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
                 </div>
             </article>
             <article class="image">
@@ -222,8 +222,8 @@
                     <p>가치를 잃지 않는 변화</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span class="ir">페이스북</span></a>
-                    <a href="#" class="link"><span class="ir">페이지이동</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
+                    <a href="#" class="link"><span class="ir">icon</span></a>
                 </div>
             </article>
         </div>
