--- a/javascript/study/imageType03.html
+++ b/javascript/study/imageType03.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이미지 타입 01</title>
+    <title>이미지 타입 03</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
@@ -17,13 +17,14 @@
                 사이트에 기초적인 구조를 가진 이미지 타입 사이트를 만들어 봅시다.
             </p>
             <div class="t_iframe">
-                <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D1087%253A149" allowfullscreen></iframe>
+                <iframe width="650" height="500" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D1087%253A149" allowfullscreen></iframe>
             </div>
 
             <h3 class="t_tit2">Site HTML</h3>
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
                 section내에 각 태그에 이름을 부여해주며, <i>articel</i> 영역과 <i>figure</i>태그 내에 img를 사용줍니다.<br>
+                추가적인 작업으로 image__sns a 영역에 <i>ir</i>를 사용해줍니다.
             </p>
             <div class="t_code">
 <pre><code class="language.js">    &lt;section id="imageType03" class="image__wrap score section">
@@ -57,8 +58,8 @@
                     &lt;p>다양성의 존중이라는 슬로건&lt;/p>
                 &lt;/div>
                 &lt;div class="image__sns">
-                    &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                    &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
                 &lt;/div>
             &lt;/article>
             &lt;article class="image">
@@ -70,8 +71,8 @@
                     &lt;p>가벼운 휴식 뒤 리프레시되는 느낌의 의류&lt;/p>
                 &lt;/div>
                 &lt;div class="image__sns">
-                    &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                    &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
                 &lt;/div>
             &lt;/article>
             &lt;article class="image">
@@ -83,8 +84,8 @@
                     &lt;p>현대사회에 알맞는 유니폼을 제안&lt;/p>
                 &lt;/div>
                 &lt;div class="image__sns">
-                    &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                    &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
                 &lt;/div>
             &lt;/article>
             &lt;article class="image">
@@ -96,8 +97,8 @@
                     &lt;p>가치를 잃지 않는 변화&lt;/p>
                 &lt;/div>
                 &lt;div class="image__sns">
-                    &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                    &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
+                    &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
                 &lt;/div>
             &lt;/article>
         &lt;/div>
@@ -108,8 +109,7 @@
             <h3 class="t_tit2">Site CSS</h3>
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
-                h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>를 사용해줍니다.
-                또한 이번에는 <i>image:hover</i> 효과에 <i>transform, transition</i>를 부여했습니다.
+                이번 코딩 css는 <i>ir</i>, <i>이미지 스프라이트</i>를 사용하여 스타일을 잡아줍니다.
             </p>
             <div class="t_code">
 <pre><code class="language.js">    /* fonts */
@@ -258,13 +258,6 @@
                 <div class="t_link">
                     <a href="https://github.com/KDB6/ck/blob/main/site/imageType/imageType03.html" target="_blank">코드 원본 보기</a>
                 </div>
-            </div>
-
-            <br><br>
-
-            <h3 class="t_tit2">결과물</h3>
-            <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/site/imageType/imageType03.html" frameborder="0"></iframe>
             </div>
     
             <div class="t_link">
